change position of alert

--- a/app/components/document-attachments.hbs
+++ b/app/components/document-attachments.hbs
@@ -1,4 +1,4 @@
-<div class="au-o-box au-c-theme-gray-200">
+<div class="au-o-box au-o-box--small au-c-theme-gray-200">
   <AuFileUpload @title={{t "attachments.attach" }} @helpTextDragDrop={{t "attachments.drag" }} @modelName={{"file"}}
     @endPoint={{"/files"}} @onFinishUpload={{perform this.uploadedAttachement}} @maxFileSizeMB="1024"
     @multiple={{true}} />
@@ -18,16 +18,6 @@
         </tr>
       </thead>
       <tbody>
-        {{#unless @decisions.length}}
-          <tr>
-            <td colspan="5">
-              <AuAlert @alertIcon="alert-triangle" @alertTitle={{t "attachments.noDecisionsFound"}} @alertskin="warning">
-                <p>{{t "attachments.decisionRequired"}}</p>
-              </AuAlert>
-
-            </td>
-          </tr>
-        {{/unless}}
         {{#each this.attachments as |attachment|}}
         <tr>
           <td>
@@ -66,3 +56,11 @@
   </div>
 </div>
 {{/if}}
+
+{{#unless @decisions.length}}
+<AuToolbar @border="top" @nowrap="true" @size="small">
+  <AuAlert @alertIcon="alert-triangle" @alertTitle={{t "attachments.noDecisionsFound"}} @alertskin="warning" class="au-u-margin-bottom-none au-u-1-1">
+    <p>{{t "attachments.decisionRequired"}}</p>
+  </AuAlert>
+</AuToolbar>
+{{/unless}}
