--- a/app/templates/inbox/agendapoints.hbs
+++ b/app/templates/inbox/agendapoints.hbs
@@ -22,6 +22,7 @@
       <AuDataTableThSortable @field="currentVersion.updatedOn" @currentSorting={{this.sort}} @label={{t 'inbox.agendapoints.updatedOnLabel'}} />
       <AuDataTableThSortable @field="status" @currentSorting={{this.sort}} @label={{t 'inbox.agendapoints.statusLabel'}} />
       <th><span class="au-c-data-table__header-title au-c-data-table__header-title--sortable">Zitting</span></th>
+      <AuDataTableThSortable @field="status" @currentSorting={{this.sort}} @label={{t 'inbox.agendapoints.attachmentsLabel'}} />
     </c.header>
     <c.body as |container|>
       {{#with container.currentVersion as |row|}}
@@ -38,6 +39,9 @@
       </td>
       <td>
         <ZittingLink @documentContainer={{container}}/>
+      </td>
+      <td>
+        {{container.attachments.length}}
       </td>
       {{/with}}
     </c.body>
