converted to a component

--- a/app/templates/inbox/agendapoints.hbs
+++ b/app/templates/inbox/agendapoints.hbs
@@ -41,7 +41,7 @@
         <ZittingLink @documentContainer={{container}}/>
       </td>
       <td>
-        {{container.attachments.length}}
+        <AttachmentsNumber @documentContainer={{container}} />
       </td>
       {{/with}}
     </c.body>
