--- a/app/templates/inbox/meetings.hbs
+++ b/app/templates/inbox/meetings.hbs
@@ -19,7 +19,7 @@
   </table.menu>
   <table.content as |c|>
     <c.header>
-      <th><span class="au-c-data-table__header-title au-c-data-table__header-title--sortable">Zitting</span></th>
+      <th class="au-c-data-table__header-title">Zitting</th>
       <AuDataTableThSortable @field="bestuursorgaan.isTijdsspecialisatieVan.naam" @currentSorting={{this.sort}} @label="Bestuursorgaan" />
       <AuDataTableThSortable @field="geplandeStart" @currentSorting={{this.sort}} @label="Tijdstip" />
       <AuDataTableThSortable @field="opLocatie" @currentSorting={{this.sort}} @label="Locatie" />
