--- a/app/templates/inbox/agendapoints.hbs
+++ b/app/templates/inbox/agendapoints.hbs
@@ -21,7 +21,8 @@
       <AuDataTableThSortable @field="currentVersion.title" @currentSorting={{this.sort}} @label={{t 'inbox.agendapoints.titleLabel'}} />
       <AuDataTableThSortable @field="currentVersion.updatedOn" @currentSorting={{this.sort}} @label={{t 'inbox.agendapoints.updatedOnLabel'}} />
       <AuDataTableThSortable @field="status.label" @currentSorting={{this.sort}} @label={{t 'inbox.agendapoints.statusLabel'}} />
-      <th><span class="au-c-data-table__header-title au-c-data-table__header-title--sortable">Zitting</span></th>
+      <th class="u-c-data-table__header-title">Zitting</th>
+      <th class="u-c-data-table__header-title">{{t 'inbox.agendapoints.attachmentsLabel'}}</th>
     </c.header>
     <c.body as |container|>
       {{#with container.currentVersion as |row|}}
@@ -38,6 +39,9 @@
       </td>
       <td>
         <ZittingLink @documentContainer={{container}}/>
+      </td>
+      <td>
+        <AttachmentsNumber @documentContainer={{container}} />
       </td>
       {{/with}}
     </c.body>
