--- a/app/components/behandeling-van-agendapunt.hbs
+++ b/app/components/behandeling-van-agendapunt.hbs
@@ -7,9 +7,11 @@
     <div class="au-o-box au-o-box--small au-c-meeting-chrome-card au-u-margin-bottom-none">
       <AuHeading @level="4" @skin="6"
                  class="au-c-meeting-chrome-card__title au-c-meeting-chrome-card__title--inset au-u-margin-bottom-small">{{t
-              "behandelingVanAgendapunten.visibility"}}</AuHeading>
-      <AuLabel><Input @type="checkbox" @checked={{this.openbaar}} {{on "input" (perform this.toggleOpenbaar)}} /> &nbsp;{{t
+                                                                                                                           "behandelingVanAgendapunten.visibility"}}</AuHeading>
+      {{#let (unique-id) as |id|}}
+      <AuLabel for={{id}}><Input @type="checkbox" @checked={{this.openbaar}} {{on "input" (perform this.toggleOpenbaar)}} id={{id}} /> &nbsp;{{t
                                                                                                                           "behandelingVanAgendapunten.openbaarLabel"}}</AuLabel>
+      {{/let}}
       {{#if this.toggleOpenbaar.isRunning}}
         <AuLoader @padding="small"/>
       {{/if}}
