--- a/app/templates/inbox/meetings.hbs
+++ b/app/templates/inbox/meetings.hbs
@@ -1,10 +1,11 @@
+{{page-title (t "inbox.meetings.pageTitle")}}
 <AuDataTable @content={{this.model}} @isLoading={{this.isLoadingModel}} @noDataMessage="Geen zittingen" @sort={{this.sort}} @page={{this.page}} @size={{this.size}} @class="container-flex--contain" as |table|>
   <table.menu as |menu|>
     <menu.general>
       <AuToolbar @size="large">
         <AuToolbarGroup>
           <AuHeading @skin="2">
-            Zittingen
+            {{t "inbox.meetings.pageTitle"}}
           </AuHeading>
         </AuToolbarGroup>
         <AuToolbarGroup class="au-c-toolbar__group--search">
