update editor import and theme variables

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -122,7 +122,7 @@
 
 
 // PLUGINS
-@import "ember-rdfa-editor";
+@import "ember-rdfa-editor/custom-components";
 @import "ember-appuniversum/p-ember-power-select";
 @import "ember-appuniversum/p-duet-datepicker";
 @import "project/p-annotations";
