update say theme

--- a/app/styles/project/_p-annotations.scss
+++ b/app/styles/project/_p-annotations.scss
@@ -14,7 +14,7 @@
   }
 
   [typeof="besluit:Agendapunt"] {
-    margin-bottom: $say-unit-small;
+    margin-bottom: $au-unit-small;
   }
 
   // Hide superfluous annotated fields
