Solved inconsistencies with the chairman between the meeting and behandeling

--- a/app/components/meeting-form.hbs
+++ b/app/components/meeting-form.hbs
@@ -191,7 +191,7 @@
                   @possibleParticipants={{this.possibleParticipants}}
                   @behandeling={{behandeling}}
                   @readOnly={{this.readOnly}}
-                  @bestuursorgaan={{this.zitting.bestuursorgaan}}
+                  @bestuursorgaan={{this.bestuursorgaan}}
                   @meeting={{this.zitting}}
                 />
               </li>
