fix mock-login font-size change

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -583,3 +583,8 @@
 .say-content--disabled {
   cursor: default;
 }
+
+// Override main container on mock-login
+.au-c-main-container--mock-login {
+  height: 100%;
+}
