fixed published editor

--- a/app/components/rdfa-editor-container.hbs
+++ b/app/components/rdfa-editor-container.hbs
@@ -1,7 +1,7 @@
 {{#if @busy}}
   <div class="container-flex--contain">
     <div class="au-c-rdfa-editor">
-      <div class="say-container say-container--sidebar-left">
+      <div class="say-container say-container--sidebar-left say-container--paper say-container--sidebar-right">
         <div class="say-container__main">
           <div class="say-editor rdfa-annotations rdfa-annotations-highlight rdfa-annotations-hover">
             <div class="say-editor__paper">
