--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -8,7 +8,7 @@
 
 <div class="au-c-body-container">
   <div class="au-c-rdfa-editor">
-    <div class="say-container say-container--sidebar-left">
+    <div class="say-container say-container--sidebar-left say-container--paper say-container--sidebar-right">
       <div class="say-container__main">
         {{#unless this.readOnly}}
           <div class="au-o-box au-o-box--small au-c-theme-gray-100">
