basic plugin setup

--- a/app/components/rdfa-editor-container.hbs
+++ b/app/components/rdfa-editor-container.hbs
@@ -27,10 +27,12 @@
   <div class="container-flex--contain" vocab="{{this.vocab}}" {{did-insert this.setPrefix}}
        typeof="{{@typeOfWrappingDiv}}" property="{{@property}}" resource="#">
     <Rdfa::RdfaEditor
-            class="au-c-rdfa-editor"
-            @profile={{@profile}}
-            @rdfaEditorInit={{this.rdfaEditorInit}}
-            @editorOptions={{this.editorOptions}}
-            @toolbarOptions={{this.toolbarOptions}} />
+      class="au-c-rdfa-editor"
+      @profile={{@profile}}
+      @rdfaEditorInit={{this.rdfaEditorInit}}
+      @editorOptions={{this.editorOptions}}
+      @toolbarOptions={{this.toolbarOptions}}
+      @plugins={{this.plugins}}
+    />
   </div>
 {{/if}}
