--- a/app/components/extracts/print-view.hbs
+++ b/app/components/extracts/print-view.hbs
@@ -15,7 +15,7 @@
         <br>
         {{meeting.bestuursorgaan.isTijdsspecialisatieVan.naam}}
         <br>
-        zitting van {{moment-format meeting.geplandeStart 'L LT'}}
+        zitting van {{detailed-date meeting.geplandeStart}}
       </AuHeading>
       <p class="au-u-margin-top-small au-u-margin-bottom">Het document slaat op de situatie zoals gekend bij het
         afleveren.</p>
